# example-app

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  setup.cfg
.github/workflows/: build-and-deploy-sinuna.yaml  build-and-deploy-sp-demo.yaml  build-and-deploy.yaml
backend/: .env.example  pyproject.toml
backend/app/: access_control.py  consents.py  dataspace_configuration.py  keys.py  main.py  prod.py  settings.py  utils.py  well_known.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: index.css  settings.js  utils.js
frontend/src/components/: Box.jsx  DataProductLink.jsx  LoginForm.jsx  Navbar.jsx  WeatherData.jsx
frontend/src/containers/: App.jsx  BatteryHealth.jsx  BeneficialOwners.jsx  CurrentWeather.jsx  PersonDetails.jsx
frontend/src/context/: dataspaceConfigurationContext.js
