[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Example dataspace application backend"
authors = ["IOXIO"]
packages = [{include = "app", from = "."}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
Authlib = "^1.5.2"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
pyjwt-key-fetcher = "^0.8.0"
async-lru = "^2.0.5"
yarl = "^1.19.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"

[tool.poetry.scripts]
dev = "app.main:main"
serve = "app.prod:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
