[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Example dataspace application backend"
authors = ["IOXIO"]
packages = [{include = "app", from = "."}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {version = "^0.35.0", extras = ["standard"]}
httpx = "^0.28.1"
async-lru = "^2.0.5"
yarl = "^1.20.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[tool.poetry.scripts]
dev = "app.main:main"
serve = "app.prod:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
